# csv_median_calculator

./: .gitignore  CMakeLists.txt  README.md  config.toml  data_generation.py  specs.md
examples/input/: level.csv  trade.csv
examples/output/: median.csv
headers/: ReadersManager.hpp  TDigest.hpp  argument_parser.hpp  config.hpp  config_parser.hpp  csv_reader.hpp  data_queue.hpp  file_stream.hpp  file_streamer.hpp  logger.hpp  median_calc.hpp  median_calculator.hpp  readers_manager.hpp  types.hpp
src/: ReadersManager.cpp  TDigest.cpp  argument_parser.cpp  config.cpp  config_parser.cpp  csv_reader.cpp  csv_reader.hpp  data_queue.cpp  file_stream.cpp  file_streamer.cpp  get_arg.cpp  get_arg.hpp  logger.cpp  main.cpp  median_calc.cpp  median_calculator.cpp  readers_manager.cpp
